backend/broPayCRM/force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <description>Stores uploaded receipt details and metadata</description>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RCPT-{0000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>