backend/broPayCRM/force-app/main/default/objects/Receipt__c/fields/Receipt_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Image_URL__c</fullName>
    <description>Public link to image (stored in S3/File)</description>
    <label>Receipt Image URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>