backend/broPayCRM/force-app/main/default/objects/Receipt__c/fields/Upload_date__c.field-meta.xml
<CustomField>
    <fullName>Upload_date__c</fullName>
    <description>When the receipt was uploaded</description>
    <label>Upload date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>