backend/broPayCRM/force-app/main/default/objects/Receipt__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who uploaded the receipt</description>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>